--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://sagalab.ai/">
-    <meta property="og:title" content="Saga AI Research Labs - AI Tools for Trading, Development & Automation">
+    <meta property="og:title" content="Building the Future with AI">
     <meta property="og:description"
         content="Leading AI innovation with advanced tools for trading, development, and automation. Open-source AI applications, autonomous systems, and developer tools.">
     <meta property="og:image" content="https://sagalab.ai/images/og-image.jpg">
