--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 <li><a href="#ai-tools">AI Tools</a></li>
                 <li><a href="#mobile-apps">Mobile Apps</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="mailto:shogn@icloud.com" class="nav-link">Contact</a></li>
+                <li><a href="mailto:sagalabs@proton.me" class="nav-link">Contact</a></li>
                 <li>
                     <a href="https://x.com/SagaAILab" target="_blank" class="icon-link" aria-label="X (Twitter)">
                         <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor" aria-hidden="true">
