fix(ui): update App Store links to direct URLs
Replaced the placeholder Branch/Appsflyer OneLink URLs with direct App Store URLs in the download buttons to ensure proper redirection and improve user experience.

Co-authored-by: terragon-labs[bot] <terragon-labs[bot]@users.noreply.github.com>

--- a/3things.html
+++ b/3things.html
@@ -100,7 +100,7 @@
   </style>
 </head>
 <body>
-  <a class="cta sticky-cta" href="https://app.link/your-onelink?id=1553693943&utm_source=meta&utm_medium=cpc&utm_campaign=main" aria-label="Download on the App Store (sticky)">
+  <a class="cta sticky-cta" href="https://apps.apple.com/au/app/3-tasks-daily-productivity/id1553693943" aria-label="Download on the App Store (sticky)">
     Download on the App Store
   </a>
 
@@ -112,7 +112,7 @@
 
       <!-- Replace the href with your Branch/Appsflyer OneLink if available.
            Fallback: direct App Store URL below. -->
-      <a class="cta" href="https://app.link/your-onelink?id=1553693943&utm_source=meta&utm_medium=cpc&utm_campaign=main">
+      <a class="cta" href="https://apps.apple.com/au/app/3-tasks-daily-productivity/id1553693943">
         Download on the App Store
       </a>
 
