--- a/3things.html
+++ b/3things.html
@@ -95,7 +95,7 @@
   </style>
 </head>
 <body>
-  <a class="cta sticky-cta" href="bit.ly/just3tasks" aria-label="Download on the App Store (sticky)">
+  <a class="cta sticky-cta" href="https://bit.ly/just3tasks" aria-label="Download on the App Store (sticky)">
     Download on the App Store
   </a>
 
@@ -107,7 +107,7 @@
 
       <!-- Replace the href with your Branch/Appsflyer OneLink if available.
            Fallback: direct App Store URL below. -->
-      <a class="cta" href="bit.ly/just3tasks">
+      <a class="cta" href="https://bit.ly/just3tasks">
         Download on the App Store
       </a>
 
