--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     <header class="hero-section">
         <div class="container">
             <div class="hero-content">
-                <h1>Where art and tech intersect</h1>
+                <h1>Where <span class="gradient-text">art and AI</span> intersect</h1>
                 <p class="hero-subtitle">We are an AI studio experiment with cutting-edge AI to solve real problems and
                     push creative boundaries. From crypto trading bots to generative art.</p>
                 <div class="hero-actions">
@@ -348,17 +348,6 @@
     </section>
 
     <main>
-        <section class="app-section" id="ai-tools">
-            <div class="container">
-                <div class="section-header">
-                    <h2>AI Tools</h2>
-                </div>
-                <div class="app-grid ai-tools-grid">
-                    <!-- AI tools will be injected here -->
-                </div>
-            </div>
-        </section>
-
         <section class="app-section" id="mobile-apps">
             <div class="container">
                 <div class="section-header">
@@ -366,6 +355,17 @@
                 </div>
                 <div class="app-grid mobile-apps-grid">
                     <!-- Mobile apps will be injected here -->
+                </div>
+            </div>
+        </section>
+
+        <section class="app-section" id="ai-tools">
+            <div class="container">
+                <div class="section-header">
+                    <h2>AI Tools</h2>
+                </div>
+                <div class="app-grid ai-tools-grid">
+                    <!-- AI tools will be injected here -->
                 </div>
             </div>
         </section>
