Fix: Correct image path to fastAI.jpg

--- a/fastai.html
+++ b/fastai.html
@@ -144,7 +144,7 @@
 
   <main class="wrap">
     <div class="card">
-      <img src="images/fastAi.jpg" alt="Chat with Fast AI Logo" class="logo-img" />
+      <img src="images/fastAI.jpg" alt="Chat with Fast AI Logo" class="logo-img" />
       <h1>One Subscription<br/>Many AI</h1>
       <p class="ai-list">ChatGPT • Gemini • DeepSeek • Claude • Grok</p>
 
