--- a/index.html
+++ b/index.html
@@ -210,9 +210,8 @@
     <header class="hero-section">
         <div class="container">
             <div class="hero-content">
-                <h1>Where <span class="gradient-text">art and AI</span> intersect</h1>
-                <p class="hero-subtitle">We are an AI studio experiment with cutting-edge AI to solve real problems and
-                    push creative boundaries. From crypto trading bots to generative art.</p>
+                <h1>Saga <span class="gradient-text">AI Research</span> Lab</h1>
+                <p class="hero-subtitle">At Saga, we push the limits of AI. Building everything from autonomous trading bots to privacy tools and generative art that redefines creativity.</p>
                 <div class="hero-actions">
                     <a href="#ai-tools" class="cta-primary">Explore Tools</a>
                     <a href="mailto:shogn@icloud.com" class="cta-secondary">Contact Us</a>
