--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     <header class="hero-section">
         <div class="container">
             <div class="hero-content">
-                <h1>Saga <span class="gradient-text">AI Research</span> Lab</h1>
+                <h1>Saga. <span class="gradient-text">AI Research</span> Lab</h1>
                 <p class="hero-subtitle">At Saga, we push the limits of AI. Building everything from autonomous trading bots to privacy tools and generative art that redefines creativity.</p>
                 <div class="hero-actions">
                     <a href="mailto:shogn@icloud.com" class="cta-secondary">Contact Us</a>
