Update support page app list

--- a/support.html
+++ b/support.html
@@ -83,11 +83,12 @@
                                 <label for="appName">Which app or tool?</label>
                                 <select id="appName" name="appName" required>
                                     <option value="">Select an app...</option>
-                                    <option value="foro">Foro AI Forum</option>
-                                    <option value="trading-bot">AI Trading Bot</option>
-                                    <option value="rebalancer">Crypto Portfolio Rebalancer</option>
-                                    <option value="dashboard">Macro Crypto Dashboard</option>
-                                    <option value="other">Other/Not Listed</option>
+                                    <option value="3-tasks">3 Tasks</option>
+                                    <option value="fast-ai">Fast AI</option>
+                                    <option value="brainy-ai">Brainy AI Helper</option>
+                                    <option value="crypton">Crypton</option>
+                                    <option value="focus-meditation">Focus Meditation</option>
+                                    <option value="keeper">Keeper Private Folder</option>
                                 </select>
                             </div>
 
