--- a/support.html
+++ b/support.html
@@ -153,7 +153,7 @@
             };
 
             // Create mailto link with form data
-            const mailtoLink = `mailto:support@sagalab.co?subject=Support Request - ${formData.app} (${formData.platform})&body=Platform: ${formData.platform}%0DApp: ${formData.app}%0DEmail: ${formData.email}%0D%0DDescription:%0D${encodeURIComponent(formData.description)}`;
+            const mailtoLink = `mailto:sagalabs@proton.me?subject=Support Request - ${formData.app} (${formData.platform})&body=Platform: ${formData.platform}%0DApp: ${formData.app}%0DEmail: ${formData.email}%0D%0DDescription:%0D${encodeURIComponent(formData.description)}`;
 
             // Open email client
             window.location.href = mailtoLink;
