--- a/brainy.html
+++ b/brainy.html
@@ -16,7 +16,7 @@
   ;n.type="text/javascript",n.async=!0,n.src=r+"?sdkid="+e+"&lib="+t;e=document.getElementsByTagName("script")[0];e.parentNode.insertBefore(n,e)};
 
 
-    ttq.load('D3TONIRC77UD89P2IM60');
+    ttq.load('D3TORS3C77U8M912UNG0');
     ttq.page();
   }(window, document, 'ttq');
   </script>
