--- a/brainy.html
+++ b/brainy.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Brainy — Imagine AI Art</title>
+  <title>Brainy — Brainy App</title>
   <meta name="description" content="Create stunning AI images with Google's latest Nano Banana model. Brainy makes AI art generation simple and powerful." />
   <meta property="og:title" content="Brainy — Imagine AI Art" />
   <meta property="og:description" content="Create stunning AI images with Google's latest Nano Banana model." />
@@ -48,18 +48,18 @@
       width:100%;
       display: grid;
       grid-template-columns: 1fr;
-      gap: 60px;
+      gap: 50px;
       align-items: center;
     }
     .card-content {
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 16px;
+      gap: 20px;
     }
     @media (min-width: 1024px) {
       .card-content {
-        gap: 20px;
+        gap: 28px;
       }
     }
     .logo-img {
@@ -71,21 +71,21 @@
     }
     @media (min-width: 1024px) {
       .card {
-        grid-template-columns: 0.85fr 1.4fr;
+        grid-template-columns: 1fr 2fr;
         max-width: 1400px;
         gap: 80px;
       }
       .card-content {
-        text-align: left;
-        align-items: flex-start;
-        grid-column: 1;
+        text-align: center;
+        align-items: center;
+        grid-column: 2;
         grid-row: 1;
       }
       .logo-img {
-        width: clamp(400px, 48vw, 600px);
+        width: clamp(520px, 62vw, 780px);
         margin-top: 0;
         margin-bottom: 0;
-        grid-column: 2;
+        grid-column: 1;
         grid-row: 1;
         order: 0;
       }
@@ -144,7 +144,9 @@
     }
     @media (min-width: 1024px) {
       footer {
-        align-self: flex-start;
+        grid-column: 1 / -1;
+        margin-top: 40px;
+        text-align: center;
       }
     }
     .sticky-cta {
@@ -176,19 +178,18 @@
   <main class="wrap">
     <div class="card">
       <div class="card-content">
-        <h1>Imagine AI Art</h1>
-        <p>Powered by Google's <span class="nano-banana">Nano Banana</span></p>
+        <h1>Brainy App</h1>
+        <p>Chat with any AI and create images.<br> Powered by Google's <span class="nano-banana">Nano Banana</span></p>
 
         <a class="cta" href="https://apps.apple.com/au/app/brainy-imagine-ai-art/id1667947372">
           Download on the App Store
         </a>
-
-        <footer>
-          <span class="sr-only">Legal</span>
-          <span>Privacy • Terms</span>
-        </footer>
       </div>
       <img src="images/brainyapp.png" alt="Brainy App" class="logo-img" />
+      <footer>
+        <span class="sr-only">Legal</span>
+        <span>Privacy • Terms</span>
+      </footer>
     </div>
   </main>
 
