--- a/brainy.html
+++ b/brainy.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <link rel="icon" type="image/svg+xml" href="images/brainy-favicon.svg" />
   <title>Brainy — Brainy App</title>
   <meta name="description" content="Create stunning AI images with Google's latest Nano Banana model. Brainy makes AI art generation simple and powerful." />
   <meta property="og:title" content="Brainy — Imagine AI Art" />
