--- a/index.html
+++ b/index.html
@@ -174,8 +174,7 @@
                 <h1>saga <span class="ai-gradient">ai</span> <span class="lab-gradient">lab</span></h1>
             </a>
             <ul class="nav-menu">
-                <li><a href="#ai-tools">AI Tools</a></li>
-                <li><a href="#mobile-apps">Mobile Apps</a></li>
+                <li><a href="#apps">Apps</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="mailto:sagalabs@proton.me" class="nav-link">Contact</a></li>
                 <li>
@@ -211,9 +210,9 @@
         <div class="container">
             <div class="hero-content">
                 <h1>Saga. <span class="gradient-text">AI Research</span> Lab</h1>
-                <p class="hero-subtitle">We design, build, and open-source cutting-edge AI applications—from autonomous agents and DeFi systems to privacy-first productivity tools. Founded by creative technologists pushing what's possible.</p>
+                <p class="hero-subtitle">Building innovative AI applications that change how you work and create.</p>
                 <div class="hero-actions">
-                    <a href="mailto:sagalabs@proton.me" class="cta-secondary">Contact Us</a>
+                    <a href="mailto:sagalabs@proton.me" class="cta">Contact Us</a>
                 </div>
             </div>
         </div>
@@ -221,7 +220,6 @@
 
     <!-- Tech Logos Section -->
     <section class="tech-logos-section">
-        <p class="tech-logos-text">Building with the latest technologies</p>
         <div class="tech-logos-ticker">
             <div class="tech-logos-track">
                 <div class="tech-logo-item">
@@ -342,28 +340,13 @@
                 </div>
             </div>
         </div>
-        </div>
     </section>
 
     <main>
-        <section class="app-section" id="mobile-apps">
+        <section class="app-section" id="apps">
             <div class="container">
-                <div class="section-header">
-                    <h2>Mobile Apps</h2>
-                </div>
-                <div class="app-grid mobile-apps-grid">
-                    <!-- Mobile apps will be injected here -->
-                </div>
-            </div>
-        </section>
-
-        <section class="app-section" id="ai-tools">
-            <div class="container">
-                <div class="section-header">
-                    <h2>AI Tools</h2>
-                </div>
-                <div class="app-grid ai-tools-grid">
-                    <!-- AI tools will be injected here -->
+                <div class="app-grid combined-apps-grid">
+                    <!-- All apps will be injected here -->
                 </div>
             </div>
         </section>
