--- a/3things.html
+++ b/3things.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <link rel="icon" type="image/svg+xml" href="images/3tasks-favicon.svg" />
   <title>3 Tasks — Focus on what matters</title>
   <meta name="description" content="Do 3 important tasks. Every day." />
   <meta property="og:title" content="3 Tasks — Focus on what matters" />
@@ -31,15 +32,46 @@
     }
     .card {
       text-align:center;
-      max-width: 820px;
+      max-width: 1400px;
       width:100%;
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 50px;
+      align-items: center;
+    }
+    .card-content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
     }
     .logo-img {
       width: 200px;
       height: auto;
-      margin-bottom: 40px;
-      border-radius: 24px;
-      box-shadow: 0 10px 40px rgba(0, 0, 0, 0.1);
+      margin-bottom: 0;
+      border-radius: 0;
+      box-shadow: none;
+      order: -1;
+    }
+    @media (min-width: 1024px) {
+      .card {
+        grid-template-columns: 1fr 2fr;
+        max-width: 1400px;
+        gap: 80px;
+      }
+      .card-content {
+        gap: 28px;
+        text-align: center;
+        align-items: center;
+        grid-column: 2;
+        grid-row: 1;
+      }
+      .logo-img {
+        width: clamp(400px, 50vw, 600px);
+        grid-column: 1;
+        grid-row: 1;
+        order: 0;
+      }
     }
     h1 {
       margin:0 0 20px;
@@ -53,10 +85,20 @@
       font-size: clamp(16px, 2.8vw, 24px);
       color:var(--muted);
     }
+    @keyframes vibrate {
+      0%, 100% { transform: rotate(0deg); }
+      2%, 98% { transform: rotate(0deg); }
+      5% { transform: rotate(-3deg); }
+      8% { transform: rotate(3deg); }
+      11% { transform: rotate(-3deg); }
+      14% { transform: rotate(3deg); }
+      17% { transform: rotate(-3deg); }
+      20% { transform: rotate(0deg); }
+    }
     .cta {
       display:inline-block;
       text-decoration:none;
-      background:rgb(43, 60, 158);
+      background:#3b82f6;
       color:#fff;
       border-radius: 14px;
       padding: clamp(14px, 3.2vw, 22px) clamp(24px, 6vw, 40px);
@@ -65,6 +107,7 @@
       letter-spacing: 0.2px;
       line-height:1;
       transition: transform .06s ease;
+      animation: vibrate 2.5s linear infinite;
     }
     .cta:active { transform: translateY(1px); }
     footer {
@@ -72,6 +115,13 @@
       font-size: 12px;
       color: var(--muted);
       opacity:.9;
+    }
+    @media (min-width: 1024px) {
+      footer {
+        grid-column: 1 / -1;
+        margin-top: 40px;
+        text-align: center;
+      }
     }
     .sticky-cta {
       position: fixed;
@@ -101,16 +151,17 @@
 
   <main class="wrap">
     <div class="card">
-      <img src="images/3Things.jpg" alt="3 Tasks App" class="logo-img" />
-      <h1>Do 3 tasks.<br/>Every day.</h1>
-      <p>Simple focus. Real progress.</p>
+      <img src="images/3tasks.png" alt="3 Tasks App" class="logo-img" />
+      <div class="card-content">
+        <h1>Do 3 tasks.<br/>Every day.</h1>
+        <p>Simple focus. Real progress.</p>
 
-      <!-- Replace the href with your Branch/Appsflyer OneLink if available.
-           Fallback: direct App Store URL below. -->
-      <a class="cta" href="https://apps.apple.com/au/app/id1553693943">
-        Download on the App Store
-      </a>
-
+        <!-- Replace the href with your Branch/Appsflyer OneLink if available.
+             Fallback: direct App Store URL below. -->
+        <a class="cta" href="https://apps.apple.com/au/app/id1553693943">
+          Download on the App Store
+        </a>
+      </div>
       <footer>
         <span class="sr-only">Legal</span>
         <span>Privacy • Terms</span>
