--- a/index.html
+++ b/index.html
@@ -4,47 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saga AI Research Labs - AI Tools for Trading, Development & Automation</title>
+    <title>Saga AI Research Labs | Advanced AI Development & Machine Learning Solutions</title>
     <meta name="description"
-        content="AI Research Lab building cutting-edge applications. Custom AI agents, autonomous trading bots, DeFi integration, and privacy-first tools. Open-source AI innovation.">
+        content="AI Research Lab building production-grade AI applications. From autonomous agents and DeFi trading bots to privacy-first tools. Video creation with Sora 2, AI agents, LLM applications, and enterprise solutions.">
     <meta name="keywords"
-        content="AI research lab, generative AI, AI agents, autonomous systems, LLM applications, open-source AI, trading automation, privacy tools, AI productivity, machine learning">
+        content="AI research lab, generative AI, AI agents, autonomous trading, DeFi AI, LLM integration, privacy AI, open source, custom AI solutions, machine learning, AI applications, multi-agent systems, prompt engineering, Sora 2, video generation">
     <meta name="author" content="Saga AI Research Labs">
-
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://sagalab.ai/">
-    <meta property="og:title" content="Building the Future with AI">
-    <meta property="og:description"
-        content="Leading AI innovation with advanced tools for trading, development, and automation. Open-source AI applications, autonomous systems, and developer tools.">
-    <meta property="og:image" content="https://sagalab.ai/images/preview.jpg">
-
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://sagalab.ai/">
-    <meta property="twitter:title" content="Saga AI Research Labs - AI Tools for Trading, Development & Automation">
-    <meta property="twitter:description"
-        content="Leading AI innovation with advanced tools for trading, development, and automation. Open-source AI applications, autonomous systems, and developer tools.">
-    <meta property="twitter:image" content="https://sagalab.ai/images/preview.jpg">
-    <link rel="canonical" href="https://sagalab.ai/">
-    <meta name="description"
-        content="AI Research Lab building production-grade AI applications. From autonomous agents and DeFi trading bots to privacy-first tools. Enterprise solutions and custom AI integration.">
-    <meta name="keywords"
-        content="AI research lab, generative AI, AI agents, autonomous trading, DeFi AI, LLM integration, privacy AI, open source, custom AI solutions, machine learning, AI applications, multi-agent systems, prompt engineering">
-    <link rel="stylesheet" href="style.css">
-
-    <!-- Favicon References -->
-    <link rel="icon" href="favicon.svg" type="image/svg+xml">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet"
-        media="print" onload="this.media='all'">
-    <noscript>
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    </noscript>
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
@@ -62,11 +27,26 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://sagalab.co/">
-    <meta property="twitter:title"
-        content="Saga AI Research Labs | Advanced AI Development & Machine Learning Solutions">
+    <meta property="twitter:title" content="Saga AI Research Labs | Advanced AI Development & Machine Learning Solutions">
     <meta property="twitter:description"
         content="Leading AI research lab specializing in advanced machine learning, generative AI, and autonomous trading systems. Building the future of intelligent technology.">
     <meta property="twitter:image" content="https://sagalab.co/images/preview.jpg">
+    <link rel="canonical" href="https://sagalab.co/">
+    <link rel="stylesheet" href="style.css">
+
+    <!-- Favicon References -->
+    <link rel="icon" href="favicon.svg" type="image/svg+xml">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet"
+        media="print" onload="this.media='all'">
+    <noscript>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    </noscript>
+
     <!-- Structured Data -->
     <script type="application/ld+json">
     {
@@ -102,27 +82,74 @@
         "itemListElement": [
           {
             "@type": "SoftwareApplication",
-            "name": "Foro AI Forum",
-            "applicationCategory": "AI Research Tool",
-            "operatingSystem": "Web"
-          },
-          {
-            "@type": "SoftwareApplication", 
-            "name": "AI Trading Bot",
-            "applicationCategory": "Financial Technology",
-            "operatingSystem": "Server"
+            "name": "Dora Make Videos with Sora 2",
+            "applicationCategory": "Video Creation",
+            "operatingSystem": "iOS",
+            "url": "https://apps.apple.com/us/app/id6754180384",
+            "description": "Make stunning videos with OpenAI's powerful Sora 2"
           },
           {
             "@type": "SoftwareApplication",
-            "name": "Crypto Portfolio Rebalancer", 
+            "name": "Foro AI Forum",
+            "applicationCategory": "AI Research Tool",
+            "operatingSystem": "Web",
+            "url": "https://github.com/Saga-Labs/foro"
+          },
+          {
+            "@type": "SoftwareApplication",
+            "name": "AI Trading Bot",
             "applicationCategory": "Financial Technology",
-            "operatingSystem": "Server"
+            "operatingSystem": "Server",
+            "url": "https://github.com/Saga-Labs/ai-trading-bot"
+          },
+          {
+            "@type": "SoftwareApplication",
+            "name": "Crypto Portfolio Rebalancer",
+            "applicationCategory": "Financial Technology",
+            "operatingSystem": "Server",
+            "url": "https://github.com/Saga-Labs/rebalancer"
           },
           {
             "@type": "SoftwareApplication",
             "name": "Macro Crypto Dashboard",
             "applicationCategory": "Analytics Tool",
-            "operatingSystem": "Web"
+            "operatingSystem": "Web",
+            "url": "https://github.com/Saga-Labs/macro-crypto-dashboard"
+          },
+          {
+            "@type": "SoftwareApplication",
+            "name": "3 Tasks: Daily Productivity",
+            "applicationCategory": "Productivity",
+            "operatingSystem": "iOS",
+            "url": "https://apps.apple.com/au/app/3-tasks-daily-productivity/id1553693943"
+          },
+          {
+            "@type": "SoftwareApplication",
+            "name": "Brainy: AI Helper",
+            "applicationCategory": "Productivity",
+            "operatingSystem": "iOS",
+            "url": "https://apps.apple.com/au/app/brainy-imagine-ai-art/id1667947372"
+          },
+          {
+            "@type": "SoftwareApplication",
+            "name": "Crypton: Crypto Tracker",
+            "applicationCategory": "Finance",
+            "operatingSystem": "iOS",
+            "url": "https://apps.apple.com/au/app/crypton-crypto-tracker/id1143691286"
+          },
+          {
+            "@type": "SoftwareApplication",
+            "name": "Focus Meditation",
+            "applicationCategory": "Health & Wellness",
+            "operatingSystem": "iOS",
+            "url": "https://apps.apple.com/au/app/drop-relax-focus-sleep-well/id1462269642"
+          },
+          {
+            "@type": "SoftwareApplication",
+            "name": "Keeper: Private Folder",
+            "applicationCategory": "Security",
+            "operatingSystem": "iOS",
+            "url": "https://apps.apple.com/au/app/only-gallery-keeper/id1532670722"
           }
         ]
       }
