--- a/3things.html
+++ b/3things.html
@@ -9,6 +9,7 @@
   <meta property="og:title" content="3 Tasks — Focus on what matters" />
   <meta property="og:description" content="Do 3 important tasks. Every day." />
   <meta property="og:type" content="website" />
+  <link rel="canonical" href="https://sagalab.co/3things/">
   <style>
     :root { --bg:#fff; --fg:#0b0b0b; --muted:#5b5b5b; --btn:#111; --btnfg:#fff; }
     @media (prefers-color-scheme: dark) {
