--- a/3things02.html
+++ b/3things02.html
@@ -9,6 +9,7 @@
   <meta property="og:title" content="3 Tasks — Master Your Day, Everyday" />
   <meta property="og:description" content="Transform your productivity. Focus on 3 tasks daily and watch your progress skyrocket." />
   <meta property="og:type" content="website" />
+  <link rel="canonical" href="https://sagalab.co/3things02/">
   <style>
     :root {
       --bg: #0071e3;
