--- a/brainy.html
+++ b/brainy.html
@@ -9,6 +9,7 @@
   <meta property="og:title" content="Brainy — Imagine AI Art" />
   <meta property="og:description" content="Create stunning AI images with Google's latest Nano Banana model." />
   <meta property="og:type" content="website" />
+  <link rel="canonical" href="https://sagalab.co/brainy/">
   <!-- TikTok Pixel Code Start -->
   <script>
   !function (w, d, t) {
