--- a/dora.html
+++ b/dora.html
@@ -9,6 +9,7 @@
   <meta property="og:title" content="DORA — Create Videos with Sora 2" />
   <meta property="og:description" content="Create stunning videos with OpenAI's Sora 2. Transform your imagination into reality with AI-powered video generation." />
   <meta property="og:type" content="website" />
+  <link rel="canonical" href="https://sagalab.co/dora/">
   <style>
     :root { --bg:#fff; --fg:#0b0b0b; --muted:#5b5b5b; --btn:#111; --btnfg:#fff; }
     @media (prefers-color-scheme: dark) {
