--- a/fastai.html
+++ b/fastai.html
@@ -9,6 +9,7 @@
   <meta property="og:title" content="Chat with Fast AI" />
   <meta property="og:description" content="Access ChatGPT, Claude, and more AI models in one app. Save money with one subscription instead of many." />
   <meta property="og:type" content="website" />
+  <link rel="canonical" href="https://sagalab.co/fastai/">
   <style>
     :root { --bg:#fff; --fg:#0b0b0b; --muted:#5b5b5b; --btn:#111; --btnfg:#fff; }
     @media (prefers-color-scheme: dark) {
