--- a/keeper.html
+++ b/keeper.html
@@ -9,6 +9,7 @@
   <meta property="og:title" content="Keeper — Only Gallery Keeper" />
   <meta property="og:description" content="Protect, organize and preserve your memories with Keeper." />
   <meta property="og:type" content="website" />
+  <link rel="canonical" href="https://sagalab.co/keeper/">
   <style>
     :root { --bg:#fff; --fg:#0b0b0b; --muted:#5b5b5b; --btn:#111; --btnfg:#fff; }
     @media (prefers-color-scheme: dark) {
