--- a/privacy.html
+++ b/privacy.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy | Saga AI Research Labs</title>
-    <link rel="canonical" href="https://sagalab.co/privacy">
+    <link rel="canonical" href="https://sagalab.co/privacy/">
     <meta name="description" content="Privacy Policy for Saga AI Research Labs. Learn how we collect, use, and protect your personal information across our AI applications and services.">
     <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="style.css">
