--- a/terms.html
+++ b/terms.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms of Service | Saga AI Research Labs</title>
-    <link rel="canonical" href="https://sagalab.co/terms">
+    <link rel="canonical" href="https://sagalab.co/terms/">
     <meta name="description" content="Terms of Service for Saga AI Research Labs. Legal terms governing the use of our AI applications, research tools, and services.">
     <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="style.css">
