Extend neural network background to full page
- Moved canvas from hero-section to body level
- Changed canvas positioning from absolute to fixed (full viewport)
- Added pointer-events: none to prevent canvas from blocking interactions
- Updated z-index: canvas at 0 (background), content at 1+
- Added position: relative to body for proper z-index stacking
- Added z-index to main, hero-section, and footer for layering
- Neural network now visible throughout entire page
- All content properly layered on top of background
- Navigation (z-index 1000) remains on top
- Theme toggle (z-index 1001) remains on top

Neural network background now covers the whole page!

--- a/index.html
+++ b/index.html
@@ -192,6 +192,9 @@
 </head>
 
 <body>
+    <!-- Full-page neural network background -->
+    <canvas id="neural-network-canvas"></canvas>
+
     <!-- Hero background container -->
     <div class="hero-background"></div>
 
@@ -239,7 +242,6 @@
     <div class="bg-blob4"></div>
 
     <header class="hero-section">
-        <canvas id="neural-network-canvas"></canvas>
         <div class="container">
             <div class="hero-content">
                 <h1>Saga. <span class="gradient-text">AI Research</span> Lab</h1>
