--- a/index.html
+++ b/index.html
@@ -90,6 +90,14 @@
           },
           {
             "@type": "SoftwareApplication",
+            "name": "Pinku Private AI",
+            "applicationCategory": "Productivity",
+            "operatingSystem": "iOS",
+            "url": "https://apps.apple.com/us/app/pinku-private-ai/id6754878073",
+            "description": "Personal AI assistant that runs entirely on-device with complete privacy"
+          },
+          {
+            "@type": "SoftwareApplication",
             "name": "Foro AI Forum",
             "applicationCategory": "AI Research Tool",
             "operatingSystem": "Web",
